# ransomware-live-mcp

./: .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.json  cli_demo.py
src/ransomware_live_mcp/: __init__.py  __main__.py  analytics.py  client.py  server.py
tests/: test_analytics.py
