[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ransomware-live-mcp"
version = "0.1.0"
description = "Model Context Protocol server exposing the ransomware.live v2 API to Claude and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Manav Doshi" }]
keywords = ["mcp", "ransomware", "threat-intelligence", "cti", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
ransomware-live-mcp = "ransomware_live_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ransomware_live_mcp"]
